--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,6 @@
 @import 'general.sass'
 @import 'buttons.sass'
-@import 'var.sass'
 @import 'bootstrap-grid'
 @import 'header'
+@import 'media_sm_md'
+@import 'description'
