3state_adaptive_slider

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -4,6 +4,10 @@
     color: #2e2e2e  
     text-transform: uppercase
 
+@mixin h3 
+    text-align: left
+    color: $head-color
+
 $head-color: #ec644b
 $text_color: #1c1c1c    
     
