--- a/src/sass/_media_sm_md.sass
+++ b/src/sass/_media_sm_md.sass
@@ -1,4 +1,126 @@
-// для мобильных расширений
+// для  девайсов col-lg и больше
+
+@media (min-width: 992px) and (max-width: 1199.98px)
+    header
+        height: 450px
+        .bg_header
+            height: 450px
+        div.container
+            padding-left: 3px
+            nav.menu
+                a.menu__link
+                    text-decoration: none
+                    display: block
+                    border-right: none
+                    padding-right: 0px
+                    font-size: 14px
+                    text-transform: uppercase
+                    transition: 1s all
+                    color: $head-color
+                    border-right: 1px solid #000
+            .header__callback__desc
+                font-size: 15px
+            .header__callback__link
+                font-size: 15px
+            h1
+                font-size: 45px
+            h2
+                font-size: 35px
+
+    .description
+        &__subtitle h2
+            font-size: 35px
+        &__block
+            &__desc
+                div.block__title
+                    text-align: center
+                    h3
+                        font-size: 20px
+                        text-align: center
+                div.block__desc
+                    font-size: 15px
+
+// для мобильных девайсов col-md                    
+
+@media (min-width: 768px) and (max-width: 991.98px)
+    
+    header
+        height: 450px
+        .bg_header
+            height: 450px
+        div.row
+            padding-top: 45px
+        .header__title
+            margin-top: 30px 
+            h1
+                font-size: 55px 
+        .header__subtitle
+            margin-top: 25px  
+            h2
+                font-size: 34px          
+        nav.menu
+            flex-direction: column
+            align-items: center
+            justify-content: center
+            position: absolute
+            top: 10px
+            left: 10px
+            background-color: rgba(0, 0, 0, .90)
+            width: 45%
+            height: 65vh
+            transition: 1s all
+            &_active
+                left: -100%
+            a.menu__link
+                font-size: 20px
+                margin-bottom: 27px
+                border-right: none
+        div.header__burger
+            display: block
+            position: absolute
+            top: 18px
+            right: 18px
+            height: 21px
+            width: 35px
+            .burger
+                display: block
+                margin-bottom: 3px
+                height: 4px
+                width: 100%
+                background-color: $head-color
+        // div.header__burger_active
+        //     .burger
+        //         margin-top: -7px
+        //         &:nth-last-child(1)
+        //             transform: rotate(45deg)
+        //         &:nth-last-child(2)
+        //             display: none
+        //         &:nth-last-child(3)
+        //             transform: rotate(-45deg)
+
+    .description
+        &__subtitle
+            margin-bottom: 15px 
+            h2
+                font-size: 35px
+        &__block
+            flex-direction: column
+            align-items: center
+            justify-content: space-between
+            height: auto
+            div.description__block__desc
+                width: 100%
+                div.block__title
+                    h3
+                        font-size: 20px
+                        text-align: center
+            div.description__block__icon
+                margin-bottom: 15px
+                               
+       
+    
+// для мобильных девайсов sm
+
 @media (max-width: 767.98px)
     header
         height: 550px
@@ -19,43 +141,45 @@
             left: 10px
             background-color: rgba(0, 0, 0, .75)
             width: 45%
-            height: 75vh
+            height: 65vh
             transition: 1s all
             &_active
                 left: -100%
             a.menu__link
-                font-size: 15px
+                font-size: 16px
                 margin-bottom: 10px
                 border-right: none
         div.header__burger
             display: block
             position: absolute
-            top: 25px
-            right: 45px
+            top: 15px
+            right: 15px
             height: 21px
-            width: 25px
+            width: 30px
             .burger
                 display: block
                 margin-bottom: 3px
                 height: 4px
                 width: 100%
                 background-color: $head-color
-        div.header__burger_active
-            .burger
-                margin-top: -7px
-                &:nth-last-child(1)
-                    transform: rotate(45deg)
-                &:nth-last-child(2)
-                    display: none
-                &:nth-last-child(3)
-                    transform: rotate(-45deg)
-        .header__callback__desc
-            font-size: 14px
-            text-align: right 
-        .header__callback__link
-            font-size: 12px
-            font-weight: 500
-            text-align: right
+        // div.header__burger_active
+        //     .burger
+        //         margin-top: -7px
+        //         &:nth-last-child(1)
+        //             transform: rotate(45deg)
+        //         &:nth-last-child(2)
+        //             display: none
+        //         &:nth-last-child(3)
+        //             transform: rotate(-45deg)
+        .header__callback
+            padding: 0px            
+            .header__callback__desc
+                font-size: 14px
+                text-align: left 
+            .header__callback__link
+                font-size: 12px
+                font-weight: 500
+                text-align: left
 
     .description
         &__subtitle h2
@@ -66,4 +190,72 @@
                     font-size: 18px
                 div.block__desc
                     font-size: 15px
+
+// для мобильных девайсов xs
+
+@media (max-width: 575.98px)                        
+    header
+        padding: 2px
+        height: 350px
+        .bg_header
+            height: 350px
+        div.row
+            padding-top: 45px
+        .header__title h1
+            font-size: 45px 
+        .header__subtitle h2
+            font-size: 26px          
+        nav.menu
+            justify-content: center
+            height: 40vh
+            a.menu__link
+                font-size: 11px
+                margin-bottom: 20px
+                border-right: none
+        div.header__burger
+            display: block
+            position: absolute
+            top: 10px
+            right: 10px
+            height: 21px
+            width: 25px
+        .header__callback    
+            .header__callback__desc
+                font-size: 12px
+                text-align: center
+            .header__callback__link
+                font-size: 12px
+                font-weight: 700
+                text-align: center
+                padding: 0px
+        .header__btn
+            padding: 0px
+            align-items: flex-start    
+            .btn.btn-callback
+                font-size: 11px
+        .header__title
+            margin-top: 30px
+            h1
+                font-size: 22px
+        .header__subtitle
+            margin-top: 20px        
+            h2
+                font-size: 20px
+
+    .description
+        &__subtitle h2
+            font-size: 20px
+        &__block
+            flex-direction: column
+            align-items: center
+            .description__block__desc
+                width: 100%
+                div.block__title
+                    h3
+                        font-size: 17px
+                        text-align: center
+            .description__block__icon
+                width: 100%
+                margin-bottom: 15px                                            
+                        
 
