--- a/src/sass/_description.sass
+++ b/src/sass/_description.sass
@@ -1,12 +1,16 @@
 .description
     padding: 50px 0
+    padding-bottom: 30px
     height: auto
     &__subtitle
         text-align: center
     &__block
+        background-color: #e5dfdc
+        border-radius: 20px
         display: flex
         justify-content: space-between
         margin-top: 25px
+        border
         &__icon
             width: 35%
             display: flex
