--- a/src/sass/_slider.sass
+++ b/src/sass/_slider.sass
@@ -1,28 +1,49 @@
 .slider
-    div.slider__content__block
-        display: flex
-        justify-content: space-around
-        align-items: flex-start
-        img
-            display: block
-            width: 48%
+    .slider__content__wrapper
+        position: relative
+        padding: 0px
+        button.slick-prev
+            outline: none
+            border: none
+            position: absolute
+            left: -70px
+            top: 50%
+            transform: translateY(-100%)
+        button.slick-next
+            outline: none
+            border: none
+            position: absolute
+            right: -70px
+            top: 50%
+            transform: translateY(-100%)    
+        div.slider__content__block
+            display: flex
+            justify-content: space-around
+            align-items: center
+            background-color: #e5dfdc
+            border-radius: 20px
+            border: 2px solid #f7c2b2
             height: auto
-        .slider__content__desc
-            width: 48%
-            .desc
-                font-size: 17px
-                width: 100%
-                text-align: justify
-                color: #2e2e2e
-                word-spacing: 1px
-                font-weight: 400
-                background-color: rgba(0,0,0, 0.06)
-                box-shadow: 1px 1px 4px $head-color
-                &:first-letter
-                    font-size: 23px
-                    color: #ec644b
-            h3
-                @include h3
+            img
                 display: block
-                margin-bottom: 5px
-                text-align: left     
+                width: 48%
+                margin: 7px 0px
+                border-radius: 15px
+            .slider__content__desc
+                width: 48%
+                .desc
+                    font-size: 17px
+                    width: 100%
+                    text-align: justify
+                    color: #2e2e2e
+                    word-spacing: 1px
+                    font-weight: 400
+                    &:first-letter
+                        font-size: 23px
+                        color: #ec644b
+                h3
+                    @include h3
+                    display: block
+                    margin-bottom: 5px
+                    text-align: left
+                    margin-top: 10px     
