--- a/src/sass/_description.sass
+++ b/src/sass/_description.sass
@@ -15,6 +15,10 @@
             width: 35%
             display: flex
             justify-content: center
+            margin-top: 35px
+            span
+                font-size: 50px
+                
         &__desc
             width: 65%
             display: flex
