ordering_modal_adaptive

--- a/src/sass/_description.sass
+++ b/src/sass/_description.sass
@@ -10,15 +10,18 @@
         display: flex
         justify-content: space-between
         margin-top: 25px
-        border
         &__icon
             width: 35%
             display: flex
             justify-content: center
             margin-top: 35px
+            border-radius: 50%
+            background-color: #b3adab
+            border: 1px dashed #fc7979
+            align-items: center
             span
                 font-size: 50px
-                
+             
         &__desc
             width: 65%
             display: flex
