--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -6,6 +6,20 @@
     color: #2e2e2e  
     text-transform: uppercase
 
+@mixin form_element
+    border: none
+    border-bottom: 2px solid #2e2e2e 
+    border-radius: 15px
+    width: 30%
+    padding: 0 15px
+    outline: none
+    display: block
+    color: #1c1c1c
+    font-size: 18px
+    background-color:  #e5dfdc
+
+        
+
 @mixin h3 
     text-align: left
     color: $head-color
